--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,6 +8,13 @@
         <h2 class="card-title">Settings</h2>
     </div>
 
+    {% if error %}
+    <div class="alert alert-error">
+        {{ error }}
+        <p>Please configure your settings below:</p>
+    </div>
+    {% endif %}
+
     <form action="/settings/update" method="POST" class="settings-form">
         <div class="settings-section">
             <h3>API Settings</h3>
@@ -17,7 +24,7 @@
                     type="password" 
                     id="openai_api_key" 
                     name="openai_api_key" 
-                    value="{{ settings.openai_api_key }}"
+                    value="{{ settings.openai_api_key if settings else '' }}"
                     required
                 >
             </div>
