--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container wrap-text">
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.type }}">
