--- a/TelegramDigest.Web/Pages/_ViewImports.cshtml
+++ b/TelegramDigest.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TelegramDigest.Web
+@using TelegramDigest.Web.Models
 @namespace TelegramDigest.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
