--- a/TelegramDigest.Web/wwwroot/css/site.css
+++ b/TelegramDigest.Web/wwwroot/css/site.css
@@ -3,13 +3,7 @@ html {
   min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
-}
-
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
@@ -34,7 +28,7 @@ body {
 /* Custom styles for forms */
 .settings-form {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 .required::after {
