use backend types in frontend (binders) + fixed issues with passwords in backend + fix if braces style + improve struct exceptions + minor changes

--- a/TelegramDigest.Web/Pages/Settings/Index.cshtml
+++ b/TelegramDigest.Web/Pages/Settings/Index.cshtml
@@ -13,6 +13,8 @@
 }
 
 <form method="post" class="settings-form">
+
+    <!-- General block -->
     <div class="card mb-4">
         <div class="card-header bg-primary text-white">
             <h5 class="mb-0">General Settings</h5>
@@ -31,6 +33,7 @@
         </div>
     </div>
 
+    <!-- SMTP block -->
     <div class="card mb-4">
         <div class="card-header bg-primary text-white">
             <h5 class="mb-0">SMTP Settings</h5>
@@ -54,21 +57,34 @@
                 <span asp-validation-for="@Model.Settings.SmtpUsername" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.Settings.SmtpPassword" class="form-label required"></label>
-                <input asp-for="@Model.Settings.SmtpPassword" class="form-control"/>
+                <label asp-for="@Model.Settings.SmtpPassword" class="form-label required">Password</label>
+                <div class="input-group">
+                    <input asp-for="@Model.Settings.SmtpPassword"
+                           class="form-control password-revealable"/>
+                    <button class="btn btn-outline-secondary password-visibility-toggle" type="button">
+                        <i class="bi bi-eye"></i>
+                    </button>
+                </div>
                 <span asp-validation-for="@Model.Settings.SmtpPassword" class="text-danger"></span>
             </div>
         </div>
     </div>
 
+    <!-- OpenAI block -->
     <div class="card mb-4">
         <div class="card-header bg-primary text-white">
             <h5 class="mb-0">OpenAI Settings</h5>
         </div>
         <div class="card-body">
             <div class="mb-3">
-                <label asp-for="@Model.Settings.OpenAiApiKey" class="form-label required"></label>
-                <input asp-for="@Model.Settings.OpenAiApiKey" class="form-control"/>
+                <label asp-for="@Model.Settings.OpenAiApiKey" autocomplete="off" class="form-label required"></label>
+                <div class="input-group">
+                    <input asp-for="@Model.Settings.OpenAiApiKey"
+                           class="form-control password-revealable"/>
+                    <button class="btn btn-outline-secondary password-visibility-toggle" type="button">
+                        <i class="bi bi-eye"></i>
+                    </button>
+                </div>
                 <span asp-validation-for="@Model.Settings.OpenAiApiKey" class="text-danger"></span>
             </div>
             <div class="mb-3">
@@ -185,5 +201,17 @@
     <partial name="_ValidationScriptsPartial"/>
     <script type="text/javascript">
         autosize(document.getElementsByClassName('input-multiline'));
+    </script>
+    <script type="text/javascript">
+        $(".password-visibility-toggle").each(function () {
+            const passwordInput = $(this).closest(".input-group").find(".password-revealable");
+            passwordInput.attr("type", "password");
+            $(this).html('<i class="bi bi-eye-slash"></i>');
+            $(this).on("click", function (e) {
+                const type = passwordInput.attr("type") === "password" ? "text" : "password";
+                passwordInput.attr("type", type);
+                $(this).html(type === "password" ? '<i class="bi bi-eye"></i>' : '<i class="bi bi-eye-slash"></i>');
+            });
+        });
     </script>
 }
