digests rss feed added

--- a/TelegramDigest.Web/Pages/Shared/_Layout.cshtml
+++ b/TelegramDigest.Web/Pages/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <partial name="_NavMenu"/>
             </div>
+            <a class="navbar-brand" href="/rss">
+                <i class="bi bi-rss"></i>
+            </a>
         </div>
     </nav>
 </header>
